# Subconscious

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LGPL_COMPLIANCE.md  LICENCE  MANIFEST.in  README.md  THIRD_PARTY_LICENSES.md  desktop_ep.py  pyinstaller_ep.py  pyproject.toml  release.yaml  requirements.txt  web_flet_ep.py
.github/: copilot-instructions.md
.github/agents/: Licence.md
.github/workflows/: pypi-release.yaml  release.yaml  windows-release.yaml
deploy/build_metadata/: apt.json  python.json  winget.json
deploy/windows/: installer.nsi
deploy/winget/: Ancilla.Subconscious-Chat.installer.yaml  Ancilla.Subconscious-Chat.locale.en-US.yaml  Ancilla.Subconscious-Chat.yaml  manifest.yaml
specs/: subconscious.md
src/: flet_ep.py  mobile_flet_ep.py
src/subconscious/: __init__.py  agent.py  auth.py  config.py  constants.py  desktop_ep.py  engine.py  events.py  indexing.py  jobs.py  mobile_engine.py  stream_events.py  system_info.py  tui.py
src/subconscious/api/: __init__.py  api.py  app.py  chat.py  engine_instance.py  models.py  runtime.py  schemas.py
src/subconscious/cli/: __init__.py
src/subconscious/db/: models.py  session.py
src/subconscious/desktop/: __init__.py  contextlist.py  engine.py  frame.py  mainwindow.py  sidebar.py  skeleton.py  titlebar.py  tray.py
src/subconscious/desktop/screens/: auth.py  chat.py  thread_settings.py
src/subconscious/desktop_tools/: __init__.py  automation.py  contacts.py  images.py  memory.py  search.py  settings.py  terminal.py  todo.py
src/subconscious/gui/: contextlist.py  frame.py  mainwindow.py  sidebar.py  skeleton.py  titlebar.py  tray.py
src/subconscious/gui/buttons/: svg_button.py
src/subconscious/gui/components/: buttons.py  form.py  forms.py  layout.py  messages.py  tray.py
src/subconscious/gui/screens/: chat.py  settings.py
src/subconscious/mobile/: __init__.py  chat.py  drawer.py  mainwindow.py  skeleton.py
src/subconscious/mobile_tools/: __init__.py  filesystem.py  web_search.py
src/subconscious/rag/: __init__.py  embeddings.py  graph.py  ignore.py  retrieval.py  sidecar.py
src/subconscious/server_tools/: __init__.py
src/subconscious/shared/: __init__.py  buttons.py  forms.py  identicon.py  layout.py  messages.py  settings.py  tool_config.py  tool_toggle.py
src/subconscious/tools/: __init__.py  calculator.py  clipboard.py  contacts.py  filesystem.py  images.py  knowledge.py  memory.py  notes.py  terminal.py  time_tools.py  todo.py  weather.py  web_tools.py
src/subconscious/tui/: agent.py  cnn.py  commands.py  editor.py  line.py  scroll.py  tui.py
src/subconscious/web/: __init__.py  skeleton.py
temp/: braille.py  genrated.py
tests/: conftest.py  test_agent_ambient_context.py  test_api.py  test_base_tool_registry.py  test_calculator.py  test_config.py  test_contacts.py  test_desktop_tool_registry.py  test_engine_init_system_info.py  test_engine_platform.py  test_engine_resolve_ambient_context.py  test_engine_share_system_context.py  test_filesystem.py  test_images.py  test_memory.py  test_mobile_tools.py  test_notes.py  test_persistent_terminal.py  test_registry_hierarchy.py  test_search_fs.py  test_server_tools.py  test_settings_tool.py  test_system_info_collect.py  test_system_info_format.py  test_system_info_helpers.py  test_system_info_persistence.py  test_system_info_resolution.py  test_terminal.py  test_time_tools.py  test_todo.py  test_tool_registry.py  test_web_tools.py
tests/api/: api.http
