[project]
name = "subconscious"
version = "0.1.0"
description = "A distributed agentic engine"
authors = [
  { name = "Brian Branch", email = "you@example.com" }
]
dependencies = [
  "httpx",
  "bcrypt",
  "pytest",
  "pyyaml",
  "pystray",
  "fastapi",
  "keyring",
  "aiosqlite",
  "flet[all]",
  "sqlalchemy",
  "pydantic-ai",
  "pytest-asyncio",
  "desktop-notifier",

  "bs4",
  "python-docx",
  "pypdf",
  "openpyxl",
  "pyperclip",
  "speedtest-cli",
  "send2trash"
]
requires-python = ">=3.12"

[project.scripts]
subconscious = "subconscious.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.flet.app]
module = "flet_ep.py"
path = "src"

[tool.flet]
product = "Subconscious"
artifact = "Subconscious"
org = "company.ancilla"
hidden_imports = [
  "desktop_notifier.resources",
  "desktop_notifier.backends.winrt",
  "pydantic_core"
]
add_data = [
  "src/subconscious;subconscious"
]
pyinstaller_args = [
  "--collect-all=pydantic",
  "--collect-all=pydantic_core",
  "--copy-metadata=genai_prices",
  "--copy-metadata=pydantic_ai_slim",
  "--copy-metadata=pydantic-ai-slim",
  "--copy-metadata=pydantic_ai",
  "--copy-metadata=pydantic-ai"
]
