[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "subconscious"
version = "0.1.0"
description = "A distributed agentic AI engine"
authors = [
  { name = "Brian Branch", email = "b.branch@ancilla.company" }
]
dependencies = [
  "httpx==0.28.1",
  "bcrypt",
  "pyyaml",
  "fastapi",
  "keyring",
  "pydantic-ai==1.51.0; sys_platform != 'android' and sys_platform != 'ios'",
  "pydantic-ai-slim==1.51.0; sys_platform != 'android' and sys_platform != 'ios'",
  "pydantic==2.11.3; sys_platform != 'android' and sys_platform != 'ios'",
  "pydantic-graph==1.51.0; sys_platform != 'android' and sys_platform != 'ios'",
  "genai-prices==0.0.52; sys_platform != 'android' and sys_platform != 'ios'",
  "griffe==1.15.0; sys_platform != 'android' and sys_platform != 'ios'",
  "opentelemetry-api==1.39.1; sys_platform != 'android' and sys_platform != 'ios'",
  "typing-inspection==0.4.0; sys_platform != 'android' and sys_platform != 'ios'",
  "flet[all]>=0.80.0",
  "aiosqlite; sys_platform != 'android' and sys_platform != 'ios'",
  "sqlalchemy; sys_platform != 'android' and sys_platform != 'ios'",

  "bs4",
  "pypdf",
  "openpyxl",
  "python-docx",
  "desktop-notifier; sys_platform != 'android' and sys_platform != 'ios'",
  "pystray; sys_platform != 'android' and sys_platform != 'ios'",
  "pyperclip; sys_platform != 'android' and sys_platform != 'ios'",
  "send2trash; sys_platform != 'android' and sys_platform != 'ios'",
  "speedtest-cli; sys_platform != 'android' and sys_platform != 'ios'"
]

requires-python = ">=3.12"

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-asyncio"
]

[project.scripts]
subconscious = "subconscious.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.flet.android]
min_sdk_version = 24
org = "company.ancilla"
bundle_id = "company.ancilla.subconscious"

[tool.flet.ios]
org = "company.ancilla"
bundle_id = "company.ancilla.subconscious"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.flet.app]
path = "src"
hide_window_on_start = true
module = "mobile_flet_ep.py"

[tool.flet.deep_linking]    # or [tool.flet.<PLATFORM>.deep_linking]
scheme = "https"
host = "subconscious.chat"

[tool.flet]
org = "company.ancilla"
product = "Subconscious"
artifact = "Subconscious"
permissions = ["location", "microphone"]
bundle_id = "company.ancilla.subconscious"
source_packages = []
hidden_imports = [
  "desktop_notifier.resources",
  "desktop_notifier.backends.winrt"
]
add_data = [
  "src/subconscious;subconscious",
  "LICENCE;.",
  "THIRD_PARTY_LICENSES.txt;.",
  "LGPL_COMPLIANCE.md;.",
  "README.md;.",
  "pydantic_core",
  "aiosqlite"
]
pyinstaller_args = [
  "--collect-all=pydantic",
  "--collect-all=pydantic_core",
  "--copy-metadata=genai_prices",
  "--copy-metadata=pydantic_ai_slim",
  "--copy-metadata=pydantic-ai-slim",
  "--copy-metadata=pydantic_ai",
  "--copy-metadata=pydantic-ai",
  "--copy-metadata=pydantic",
  "--copy-metadata=pydantic_graph",
  "--copy-metadata=griffe",
  "--copy-metadata=opentelemetry_api",
  "--copy-metadata=typing_inspection",
  "--exclude-module=google.genai.types"
]
